--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-month-year-picker": "^1.9.0",
     "react-native-network-info": "^5.2.1",
     "react-native-paper": "^5.13.1",
+    "react-native-pdf": "^6.4.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "^2.14.4",
     "react-native-render-html": "^6.3.4",
