--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-circular-progress": "^1.4.1",
     "react-native-date-picker": "^5.0.10",
     "react-native-dialog": "^9.3.0",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-fontawesome": "^7.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.16.1",
