--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -252,11 +252,8 @@ android {
     //     exclude 'lib/arm64-v8a/libc++_shared.so'
     // }
 
-packagingOptions {
-        exclude "lib/arm64-v8a/libc++_shared.so"
-        exclude "lib/x86_64/libc++_shared.so"
-        exclude "lib/x86/libc++_shared.so"
-        exclude "lib/armeabi-v7a/libc++_shared.so"
+ packagingOptions {
+        pickFirst '**/libc++_shared.so'
     }
 }
 
