--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.16.1",
     "react-native-gifted-chat": "^2.8.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-picker": "^2.3.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-image-view": "^2.1.9",
