--- a/package.json
+++ b/package.json
@@ -63,12 +63,14 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.18.0",
     "react-native-search-filter": "^0.1.5",
+    "react-native-sms-retriever": "^1.1.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-tag-autocomplete": "^1.0.22",
     "react-native-text-input-mask": "^3.1.5",
     "react-native-uuid-generator": "^6.1.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^5.1.1",
     "react-navigation": "^4.4.0",
     "react-number-format": "^5.4.3",
     "react-redux": "^9.2.0",
