--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,10 +2,10 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "31.0.0"
+        buildToolsVersion = "33.0.0"
         minSdkVersion = 23
-        compileSdkVersion = 31
-        targetSdkVersion = 31
+        compileSdkVersion = 33
+        targetSdkVersion = 33
         kotlinVersion = '1.8.0'
 
         if (System.properties['os.arch'] == "aarch64") {
@@ -19,6 +19,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' } // Si nécessaire
     }
     dependencies {
         classpath("com.android.tools.build:gradle:7.2.1")
