--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "react-native-text-input-mask": "^3.1.5",
     "react-native-uuid-generator": "^6.1.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-video": "^5.1.1",
+    "react-native-video": "^6.0.0",
+    "react-native-video-controls": "^2.7.1",
     "react-navigation": "^4.4.0",
     "react-number-format": "^5.4.3",
     "react-redux": "^9.2.0",
