--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-autocomplete-input": "^5.5.6",
+    "react-native-blob-util": "^0.16.3",
     "react-native-calendars": "^1.1310.0",
     "react-native-circular-progress": "^1.4.1",
     "react-native-date-picker": "^5.0.10",
@@ -43,6 +44,7 @@
     "react-native-file-viewer": "^2.1.5",
     "react-native-fontawesome": "^7.0.0",
     "react-native-fs": "^2.20.0",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.16.1",
     "react-native-gifted-chat": "^2.8.0",
     "react-native-google-places-autocomplete": "^2.4.1",
@@ -51,6 +53,7 @@
     "react-native-image-view": "^2.1.9",
     "react-native-keyboard-controller": "^1.16.8",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^0.27.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^13.0.1",
     "react-native-month-year-picker": "^1.9.0",
