--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-month-year-picker": "^1.9.0",
     "react-native-network-info": "^5.2.1",
+    "react-native-pager-view": "^5.4.10",
     "react-native-paper": "^5.13.1",
     "react-native-pdf": "^6.4.0",
     "react-native-popup-menu": "^0.16.1",
@@ -69,6 +70,7 @@
     "react-native-sms-retriever": "^1.1.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-step-indicator": "^1.0.3",
+    "react-native-tab-view": "^3.1.1",
     "react-native-tag-autocomplete": "^1.0.22",
     "react-native-text-input-mask": "^3.1.5",
     "react-native-uuid-generator": "^6.1.1",
