--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-native-sms-retriever": "^1.1.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-step-indicator": "^1.0.3",
+    "react-native-svg": "^13.0.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-tag-autocomplete": "^1.0.22",
     "react-native-text-input-mask": "^3.1.5",
