--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-autocomplete-input": "^5.5.6",
     "react-native-blob-util": "^0.16.3",
     "react-native-calendars": "^1.1310.0",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-circular-progress": "^1.4.1",
     "react-native-date-picker": "^5.0.10",
     "react-native-dialog": "^9.3.0",
