--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.0.0",
     "react-native-video-controls": "^2.7.1",
+    "react-native-windows": "^0.70.6",
     "react-navigation": "^4.4.0",
     "react-number-format": "^5.4.4",
     "react-redux": "^9.2.0",
