--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@notifee/react-native": "^5.7.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/netinfo": "^9.3.1",
-    "@react-native-documents/picker": "^10.1.1",
     "@react-native-firebase/app": "^15.1.0",
     "@react-native-firebase/auth": "^15.1.0",
     "@react-native-firebase/firestore": "^15.1.0",
@@ -45,6 +44,7 @@
     "react-native-circular-progress": "^1.4.1",
     "react-native-date-picker": "^5.0.10",
     "react-native-dialog": "^9.3.0",
+    "react-native-document-picker": "^9.3.1",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fontawesome": "^7.0.0",
     "react-native-fs": "^2.20.0",
