--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
       android:requestLegacyExternalStorage="true"
       
       android:theme="@style/AppTheme">
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyBIuURxT-7PJh7oqstw1oI3E-0prLjUbC8" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
